test/programs/invalid/interpreter/PropertySetOnNonClass.lox
var someInteger = 1;
print someInteger.someProperty = 4; // error, interpreter stops here
print someInteger.otherProperty = 5; // would be an error, but interpreter already stopped
